# data-acc

./: .gitignore  .gitmodules  .stestr.conf  .travis.yml  CONTRIBUTING.rst  Dockerfile.in  Gopkg.toml  Makefile  Makefile.docker  README.md  create-tar.sh  dacd.service  data-acc-brick-host.service  go.mod  go.sum  push.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.circleci/: config.yml
ansible/: README  demo.sh  hosts  main.yml  master.yml  requirements.yml
ansible/dac-worker/: docker-compose.yml
beegfs-ansible/: README.md  dac-b.yml  inv-b.yml
burstbuffer/: execution_facade.py  fakewarp_facade.py  model.py
dac-ansible/: README  README.md  ansible.cfg  create-servers.py  hosts  hosts.example  master.yml  requirements.yml
docker-ohpc/: README.md
docker-slurm/: Dockerfile  README.md  build.sh  burst_buffer.conf  demo.sh  docker-compose.yml  docker-entrypoint.sh  register_cluster.sh  slurm.conf  slurmdbd.conf  update_burstbuffer.sh
docs/: index.html  index.md  install.md
fake-dac-ansible/: README  hosts  master.yml  requirements.yml  slurm-master  slurm-worker
fs-ansible/: README.md  ansible.cfg  broken.sh  cpu.yml  create.yml  dac-beegfs.yml  delete.yml  demo.sh  inv_gen.py  inventory  restore.yml  test-dac-beegfs-2.yml  test-dac-beegfs.yml  test-dac-lustre-multi.yml  test-dac-lustre.yml  test-dac.yml  test-dac2.yml  test-inventory  test-inventory-beegfs  test-inventory-lustre  test-inventory-lustre-2dac  test-inventory-lustre-multi
tools/: dac-reset.sh  dac-test.sh  etcd-ls.sh  slurm-demo.sh  slurm-test.sh
(+467 files in other folders)
