[metadata]
name = burstbuffer
summary = Burst buffer using commodity hardware
description-file =
    README.rst
author = John Garbutt
author-email = john.garbutt@stackhpc.com
home-page = https://stackhpc.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    kayobe

[build_sphinx]
all-files = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html
